# pyFlowSOM

./: .coveragerc  .gitignore  .travis.yml  LICENSE  README.md  build.sh  clusters_from_example.csv  clusters_from_python.csv  pyflowsom.c  pyflowsom_test.py  pyproject.toml  requirements-test.txt  requirements.txt  setup.py  test.sh
.github/workflows/: build.yml  wheels.yml
examples/: clusters_from_python.csv  debugout.R  example_node_output.csv  example_node_output_script-092e1be.csv  example_node_output_script-96b2d3d.csv  example_node_output_script-Sophie.csv  example_som_script.R  rFlowSOM.R
pyFlowSOM/: .gitignore  __init__.py  cyFlowSOM.pyx  flowsom.c  generate_test_heatmaps.py  generate_test_outputs.py  pyflowsom_test.py
test/: pyflowsom_test.py
