[build-system]
requires = ["setuptools", "wheel", "numpy>=1,<2", "Cython>=0.29,<1"]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
skip = [
    "cp36-*", # Python 3.6
    "cp37-*", # Python 3.7
    "pp*", # PyPy wheels on all platforms
    "*_i686", # 32bit Linux Wheels
    "*_s390x",
    "*-musllinux*",
    "*-win32", # 32bit Windows Wheels
    "*_ppc64le",
]
test-command = "pytest {project}/test"
test-requires = ["pytest", "pandas"]
build-frontend = "build"
build-verbosity = 3


# On an Linux Intel runner with qemu installed, build Intel and ARM wheels
[tool.cibuildwheel.linux]
archs = ["x86_64", "aarch64"]

# Build `universal2` and `arm64` wheels on an Intel runner.
# Note that the `arm64` wheel and the `arm64` part of the `universal2`
# wheel cannot be tested in this configuration.
[tool.cibuildwheel.macos]
archs = ["x86_64", "universal2", "arm64"]


[tool.cibuildwheel.windows]
archs = ["amd64", "arm64"]
